# the-mines-challenge

./: .dockerignore  .env.sample  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  Api.Dockerfile  Cargo.toml  LICENSE  Makefile  NOTES.md  README.md  Ui.Dockerfile  apm-server.docker.yml  docker-compose.yml  package.json  tsconfig.base.json
.githooks/: pre-commit
.github/workflows/: build-image-api.yml  build-image-ui.yml  nest-stryker.yml  nest-test.yml  publish-containers.yml
.watchman/: mines-uirs-crates.json  mines-uirs-query.json
.yarn/plugins/@yarnpkg/: plugin-interactive-tools.cjs
migrations/config/: flyway.conf
migrations/versions/: R__Game_Cells_View.sql  R__Game_Moves_View.sql  V1__Initial_Game_Tables.sql
server-express/: .env.sample  package.json  tsconfig.json
server-express/src/: main.ts
server-express/src/models/: cat-model.ts
server-nest/: .env.sample  package.json  stryker.conf.js  tsconfig.json
server-nest/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  config.ts  io-validation.pipe.spec.ts  io-validation.pipe.ts  logger.middleware.ts  main.ts
ui/: .eslintrc.js  healthcheck.js  next.config.js  package.json  tsconfig.json
ui-rs/: .env.sample  Cargo.toml  package.json  tsconfig.json  webpack.config.ts
ui-rs/crates/mines_uirs/: Cargo.toml  README.md
ui-rs/crates/mines_uirs/src/: api.rs  game.rs  lib.rs  util.rs
ui-rs/crates/mines_uirs/src/components/: error_message.rs  game.rs  game_board.rs  game_list.rs  mod.rs
ui-rs/crates/mines_uirs/src/routes/: game_route.rs  home_route.rs  mod.rs
ui-rs/src/: index.css  index.ejs  index.ts  renderer.js
ui/src/: tsconfig.json  types.ts
(+65 files in other folders)
