[package]
name = "mines_uirs"
version = "0.1.0"
authors = ["Bryan Swift <bryan@bryanjswift.com>"]
edition = "2018"
description = "yew-rs based UI"
repository = "https://github.com/bryanjswift/the-mines-challenge"
license = "MIT"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.38"
dotenv_codegen = "0.15.0"
serde = "1.0.120"
serde_json = "1.0.61"
yew = "0.17.4"
yew-router = "0.14.0"
wasm-bindgen = "0.2.69"
